Changes in 1.8 (??.??.2011)

 - speedup for collada writing.

 - speedup for xml-writing.

 - CFileSystem::removeFileArchive now checking for normalized path

 - Fix zip's with passwords on 64-bit systems (thx @ Dr. Gladman for writing the bugfix)

 - replace asserts in tests with macro assert_log to allow running all tests through on problems.

 - added IGUIElement::setName and IGUIElement::getName (similar to ISceneNode)
 
 - CSceneCollisionManager::getScreenCoordinatesFrom3DPosition uses now getCurrentRenderTargetSize instead of getScreenSize so it can work with render textures.

 - line2d::getClosestPoint can now also get the closest point on the line additional to only checking for closest point on the line-segment.

 - avoid division by zero in line2d::getClosestPoint when start- and endpoint are identical

 - Support for better collada texture wrapping support on loading.

 - XML-reader now ignores all whitespace-only EXN_TEXT elements as old way didn't work in cross-platform way (and arguably also not well on Windows). 

 - CXMLReader initializes IsEmptyElement now.

 - line2d::intersectWith and and line2d::getClosestPoint work now also with integers.

 - line2d::getMiddle and line3d::getMiddle work now also with integers. But can be slower for compilers which are not optimizing division by 2 to multiplication by 0.5 for floats.

 - Add IGUIEnvironment::getHovered to get the element most recently known to be under the mouse cursor

 - Add support for bsp brush entities. Written by Hendu.

 - Add IGUIComboBox::setMaxSelectionRows and IGUIComboBox::getMaxSelectionRows

 - Scenemanager switches from type ESNT_UNKNOWN to type ESNT_SCENE_MANAGER.

 - Add getActiveFont to all elements which have setOverrideFont for cleaner code

 - Add getOverrideFont to all elements which have setOverrideFont to have a consistent interface

 - IGUIEditBox: added missing serialization for Border

 - IGUIEditBox: remove bug that added spaces to the end of each line 
