@@ -90,7 +90,9 @@ static bool testCalculation_atof(const char * valueString)
 	logTestString("\n String '%s'\n New fast %.40f\n Old fast %.40f\n     atof %.40f\n",
 		valueString, newFastValue, oldFastValue, atofValue);
 
-	bool accurate = fabs(newFastValue - atofValue) <= fabs(oldFastValue - atofValue);
+	const f32 diffNew = fabs(newFastValue - atofValue) ;
+	const f32 diffOld = fabs(newFastValue - atofValue) ;
+	bool accurate = diffNew <= diffOld || equalsByUlp(diffNew, diffOld, 1);
 
 	if(!accurate)
 		logTestString("*** ERROR - less accurate than old method ***\n\n");
@@ -275,5 +277,8 @@ bool test_strtol(void)
 
 bool fast_atof(void)
 {
-	return test_fast_atof() && test_strtol();
+	bool ok = true;
+	ok &= test_fast_atof() ;
+	ok &= test_strtol();
+	return ok;
 }
