@@ -1,4 +1,4 @@
 Tests finished. 1 test of 1 passed.
 Compiled as DEBUG
-Test suite pass at GMT Sun Jun  3 18:56:35 2012
+Test suite pass at GMT Sun Jun  3 20:56:51 2012
 
